# Coffee-Report

./: README.md  pyproject.toml
coffee_report/: __init__.py  main.py  models.py  readers.py  reporters.py  utils.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_3a30e713776ca739___init___py.html  z_3a30e713776ca739_main_py.html  z_3a30e713776ca739_models_py.html  z_3a30e713776ca739_readers_py.html  z_3a30e713776ca739_reporters_py.html  z_3a30e713776ca739_utils_py.html
tests/: test_main.py  test_readers.py  test_reporters.py
