[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-report"
version = "1.0.0"
description = "Generate reports from student coffee consumption data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tabulate>=0.9.0",
]

[project.scripts]
coffee-report = "coffee_report.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["coffee_report"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true